Add GET /vice/async-data, fix test warnings
